...
        }}
      />
      <Stack.Screen
        name="group/[id]/index"
        options={{
          title: "",
          headerBackTitle: "Back",
        }}
      />
      <Stack.Screen
        name="group/[id]/add-expense"
        options={{
          title: "Add Expense",
          presentation: "modal",
        }}
      />
      <Stack.Screen
        name="group/[id]/expense/[expenseId]"
        options={{
...
          presentation: "modal",
        }}
      />
      <Stack.Screen
        name="group/[id]/scan-receipt"
        options={{
          title: "Scan Receipt",
          presentation: "fullScreenModal",
          headerShown: false,
        }}
      />
      <Stack.Screen
        name="group/[id]/receipt/[receiptId]/index"
...
